--- a/Falcon project/falcon.html
+++ b/Falcon project/falcon.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Falcon Academy</title>
+    <title>The Falcon Academy</title>
     <link rel="icon" href="logofal.png">
     <link rel="stylesheet" href="falcon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
