--- a/course.html
+++ b/course.html
@@ -15,7 +15,7 @@
         
             <div class="topnav">
                 
-                <a href="falcon.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="course.html">Courses</a>
                 <a href="contact.html">Contact</a>
                 <a href="https://forms.gle/2zEbmygN7Kg2aoRW7" target="_blank">Apply</a>
