--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,12 @@
 		<div class="contact-box">
 			<div class="left"></div>
 			<div class="right">
-				<h2>Contact Us</h2>
-				<input type="text" class="field" placeholder="The Falcon Academy">
-				<input type="text" class="field" placeholder="thefalconacademy.info@gmail.com">
-				<input type="text" class="field" placeholder="+91-8220055688">
-				
+			<h2>Contact Us</h2>
+				<input type="text" class="field" placeholder="The Falcon Academy" readonly>
+				<input type="text" class="field" placeholder="thefalconacademy.info@gmail.com" readonly>
+				<input type="text" class="field" placeholder="+91-8220055688" readonly>
+                                <textarea placeholder="Message" class="field" readonly>For any queries,Kindly check the above details to contact us.</textarea>
+				<button class="btn">Thank You</button>
 			</div>
 		</div>
 	</div>
