--- a/index.html
+++ b/index.html
@@ -82,6 +82,20 @@
     <button class="linkin"><a href="https://www.linkedin.com/in/keerthana-shanmugasundram-911487235/" target="_blank"><img src="linkedin.svg" height="30px"></a></button>
   </div>
 </div>
+
+    <div class="card">
+  <div class="card-image">
+      <img src="manoj.JPG" alt="Profile image">
+  </div>
+  <p class="name">Manoj</p>
+  <p>Motivational Speaker</p>
+  <p>"dreams take flight and you'll discover the motivation and inspiration. you need to conquer your goals and embark on a journey of personal and professional success. Together, let's soar to greater heights!"</p>
+  <div class="socials">
+      <button class="insta"><a href="https://www.instagram.com/itsmanoj_official/" target="_blank"><img src="instagram.svg" ></a></button>
+      <button class="linkin"><a href="#" target="_blank"><img src="linkedin.svg" height="30px"></a></button>
+      
+  </div>
+</div>
 <!--END Profile card-->
 
 
