--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
   <div class="card-image">
       <img src="manoj.JPG" alt="Profile image">
   </div>
-  <p class="name">Manoj</p>
+  <p class="name">Manoj Murugan</p>
   <p>Outbound Trainer</p>
   <p>"dreams take flight and you'll discover the motivation and inspiration. you need to conquer your goals and embark on a journey of personal and professional success. Together, let's soar to greater heights!"</p>
   <div class="socials">
       <button class="insta"><a href="https://www.instagram.com/itsmanoj_official/" target="_blank"><img src="instagram.svg" ></a></button>
-      <button class="linkin"><a href="#" target="_blank"><img src="linkedin.svg" height="30px"></a></button>
+      <button class="linkin"><a href="#" ><img src="linkedin.svg" height="30px"></a></button>
       
   </div>
 </div>
