--- a/profiles.html
+++ b/profiles.html
@@ -95,7 +95,7 @@
         <p>Technical Trainer</p>
         <p>"Our academy is dedicated to empowering individuals with the skills and knowledge they need to thrive in the ever-evolving world of technology."</p>
         <div class="socials">
-            <button class="insta"><a href="https://www.instagram.com/prajithkumar_shanmugam/" target="_blank"><img src="instagram.svg" ></a></button>
+            <button class="insta"><a href="https://www.instagram.com/prajithkumar_shanmugam/" target="_blank"><img src="instagram.svg" width="28px"></a></button>
             <button class="linkin"><a href="https://www.linkedin.com/in/prajithkumar-shanmugam-a1062919b/" target="_blank"><img src="linkedin.svg" height="30px"></a></button>
             
         </div>
@@ -109,7 +109,7 @@
         <p>Technical Trainer</p>
         <p>"we pride ourselves on providing a supportive and conducive learning environment that fosters growth and innovation."</p>
         <div class="socials">
-          <button class="insta"><a href="#"><img src="instagram.svg" ></a></button>
+          <button class="insta"><a href="#"><img src="instagram.svg" width="28px"></a></button>
           <button class="linkin"><a href="https://www.linkedin.com/in/devaganthan-b-b94b0b270/" target="_blank"><img src="linkedin.svg" height="30px"></a></button>
         </div>
       </div>
@@ -122,7 +122,7 @@
         <p>Soft Skill Trainer</p>
         <p>"Beyond the classroom, we encourage extracurricular activities and provide a range of opportunities for students to enhance their overall development."</p>
         <div class="socials">
-          <button class="insta"><a href="https://instagram.com/naughty_nandi?igshid=MzNlNGNkZWQ4Mg==" target="_blank"><img src="instagram.svg" ></a></button>
+          <button class="insta"><a href="https://instagram.com/naughty_nandi?igshid=MzNlNGNkZWQ4Mg==" target="_blank"><img src="instagram.svg" width="28px"></a></button>
           <button class="linkin"><a href="https://in.linkedin.com/in/nandhini-parameswaran-5836541a5" target="_blank"><img src="linkedin.svg" height="30px"></a></button>
         </div>
       </div>
@@ -135,7 +135,7 @@
         <p>Soft Skill Trainer</p>
         <p>"Join The Falcon Academy today and unlock your full potential in the world of technology. Experience the Falcon difference and embark on a journey of excellence, innovation, and success."</p>
         <div class="socials">
-          <button class="insta"><a href="#"><img src="instagram.svg" ></a></button>
+          <button class="insta"><a href="#"><img src="instagram.svg" width="28px"></a></button>
           <button class="linkin"><a href="https://www.linkedin.com/in/keerthana-shanmugasundram-911487235/" target="_blank"><img src="linkedin.svg" height="30px"></a></button>
         </div>
       </div>
@@ -148,7 +148,7 @@
         <p>Outbound Trainer</p>
         <p>"dreams take flight and you'll discover the motivation and inspiration. you need to conquer your goals and embark on a journey of personal and professional success. Together, let's soar to greater heights!"</p>
         <div class="socials">
-            <button class="insta"><a href="https://www.instagram.com/itsmanoj_official/" target="_blank"><img src="instagram.svg" ></a></button>
+            <button class="insta"><a href="https://www.instagram.com/itsmanoj_official/" target="_blank"><img src="instagram.svg" width="28px"></a></button>
             <button class="linkin"><a href="#" ><img src="linkedin.svg" height="30px"></a></button>
             
         </div>
