--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <div class="bird">
             </div>
         <h1 class="intro">The <span class="falcon">Falcon</span> Academy</h1>
+          
+        <h1 class="intro">Learning <span class="falcon">is</span> Liberation</h1>
     </div><br>
      
       <div id="box"></div>
