--- a/profiles.html
+++ b/profiles.html
@@ -89,7 +89,7 @@
 
       <div class="card">
         <div class="card-image">
-            <img src="praji.JPG" alt="Profile image">
+            <img src="pk.png" alt="Profile image">
         </div>
         <p class="name">Prajithkumar Shanmugam</p>
         <p>Technical Trainer</p>
