--- a/profiles.html
+++ b/profiles.html
@@ -14,7 +14,7 @@
     
 </head>
 
-<body background="one.jpg">
+<body background="bgkd.jpg">
 
   <header>
     <span class="headername"><img src="default.png" width="200" height="35px"></span>
