--- a/course.html
+++ b/course.html
@@ -42,13 +42,13 @@
                   <span class="title">Achievements</span>
                 </a>
               </li>
-              <li>  <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7AHv2IEN1RgRHyECKktVdrhGqJmIAoMXgaZwaR5q1jV51mw/viewform" target="_blank">
+              <li>  <a href="career.html" target="_blank">
                   <span class="icon"><img src="personal-development.png" width="25px" height="25px"></ion-icon></span>
                   <span class="title">Career</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7AHv2IEN1RgRHyECKktVdrhGqJmIAoMXgaZwaR5q1jV51mw/viewform">
                   <span class="icon"><img src="feedback.png" width="25px" height="25px"></span>
                   <span class="title">Feedback</span>
                 </a>
