--- a/career.html
+++ b/career.html
@@ -121,12 +121,12 @@ Identify the skills required for success in your chosen field. Access resources,
 
          <h3>Resume Building</h3>
 Learn how to create a professional resume that showcases your qualifications and achievements effectively. We can provide templates and tips for crafting an impressive resume.
-    <a href="https://www.resumemaker.online/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia"><li>ResumeMaker</li></a>
-    <a href="https://resumetrick.com/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia"><li>ResumeTrick</li></a>
-    <a href="https://www.tealhq.com/tools/resume-builder?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia"><li>Tealhq</li></a>
-    <a href="https://www.leet.co/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia"><li>LeetResume</li></a>
-    <a href="https://www.canva.com/create/resumes/"><li>Canva</li></a>
-    For More Resume Building sites..<a href="https://www.futurepedia.io/?searchTerm=resume+building">Click Here</a>....
+    <a href="https://www.resumemaker.online/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia" target="_blank"><li>ResumeMaker</li></a>
+    <a href="https://resumetrick.com/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia" target="_blank"><li>ResumeTrick</li></a>
+    <a href="https://www.tealhq.com/tools/resume-builder?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia" target="_blank"><li>Tealhq</li></a>
+    <a href="https://www.leet.co/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia" target="_blank"><li>LeetResume</li></a>
+    <a href="https://www.canva.com/create/resumes/" target="_blank"><li>Canva</li></a>
+    For More Resume Building sites..<a href="https://www.futurepedia.io/?searchTerm=resume+building" target="_blank">Click Here</a>....
 
         <h2>Job Search</h2>
         <!-- Add content for "Job Search" section -->
