--- a/career.html
+++ b/career.html
@@ -37,7 +37,7 @@
       <div class="toggle"></div>
       <ul>
         <li>
-          <a href="home.html">
+          <a href="index.html">
             <span class="icon"><img src="home.png" width="25px" height="25px"></span>
             <span class="title">Home</span>
           </a>
