--- a/career.html
+++ b/career.html
@@ -23,6 +23,26 @@
             background-color: #fff;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+        .btnn {
+    background-color: #77777700;
+    overflow: hidden;
+    border-radius: 30dp;
+    }
+    .btnn a {
+    text-decoration: none;
+    display: inline-block;
+    color: #070707;
+    font-size: 24px;
+    border: 2px solid #708b96;
+    padding: 14px 70px;
+    border-radius:50px;
+    
+    }
+    .btnn a:hover {
+    background-color:  #00ffff80;
+    color: black;
+    }
+        
         </style>
     </head>
    
@@ -121,12 +141,12 @@ Identify the skills required for success in your chosen field. Access resources,
 
          <h3>Resume Building</h3>
 Learn how to create a professional resume that showcases your qualifications and achievements effectively. We can provide templates and tips for crafting an impressive resume.
-    <a href="https://www.resumemaker.online/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia" target="_blank"><li>ResumeMaker</li></a>
-    <a href="https://resumetrick.com/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia" target="_blank"><li>ResumeTrick</li></a>
-    <a href="https://www.tealhq.com/tools/resume-builder?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia" target="_blank"><li>Tealhq</li></a>
-    <a href="https://www.leet.co/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia" target="_blank"><li>LeetResume</li></a>
-    <a href="https://www.canva.com/create/resumes/" target="_blank"><li>Canva</li></a>
-    For More Resume Building sites..<a href="https://www.futurepedia.io/?searchTerm=resume+building" target="_blank">Click Here</a>....
+    <a href="https://www.resumemaker.online/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia"><li>ResumeMaker</li></a>
+    <a href="https://resumetrick.com/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia"><li>ResumeTrick</li></a>
+    <a href="https://www.tealhq.com/tools/resume-builder?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia"><li>Tealhq</li></a>
+    <a href="https://www.leet.co/?utm_source=futurepedia&utm_medium=marketplace&utm_campaign=futurepedia"><li>LeetResume</li></a>
+    <a href="https://www.canva.com/create/resumes/"><li>Canva</li></a>
+    For More Resume Building sites..<a href="https://www.futurepedia.io/?searchTerm=resume+building">Click Here</a>....
 
         <h2>Job Search</h2>
         <!-- Add content for "Job Search" section -->
@@ -160,6 +180,15 @@ Prepare for interviews with confidence. Access interview tips, common interview 
 <li><a href="https://www.interviewcake.com/" target="_blank">Interview Cake</a></li>
 <li><a href="https://www.biginterview.com/" target="_blank">Big Interview</a></li>
 
+<h4>Download Course Pdf</h4>
+<div class="btnn">
+<a href="notes of c.pdf" download="C.pdf">C Pdf</a>
+<a href="Java notes Codes.learning.pdf" download="java.pdf">Java Pdf</a>
+<a href="Python_codeslearning.pdf" download="python.pdf">Python Pdf</a>
+<a href="DBMS Notes.pdf" download="dbms.pdf">DBMS Pdf</a>
+<a href="Data Structures.pdf" download="data structure.pdf">Data Structure Pdf</a>
+<a href="C++ Notes.pdf" download="Cpp.pdf">C++ Pdf</a>
+</div>
 
        <h2>Get in Touch</h2>
            If you have specific questions or need personalized career guidance, don't hesitate to reach out to our career experts. We're here to help you succeed in your chosen career path.
