--- a/career.html
+++ b/career.html
@@ -190,6 +190,21 @@ Prepare for interviews with confidence. Access interview tips, common interview 
 <a href="C++ Notes.pdf" download="Cpp.pdf">C++ Pdf</a>
 </div>
 
+        
+<h4>Cerification Courses for Free</h4>
+Google Digital Marketing Course (With Certificate): <a href="https://learndigital.withgoogle.com/digitalgarage/course/digital-marketing" target="_blank">https://learndigital.withgoogle.com/digitalgarage/course/digital-marketing</a><br>
+
+Google AI Course: <a href="https://ai.google/education/" target="_blank">https://ai.google/education/</a><br>
+
+Google Analytics Course: <a href="https://analytics.google.com/analytics/academy/course/6" target="_blank">https://analytics.google.com/analytics/academy/course/6</a><br>
+
+Microsoft Data Science Course: <a href="https://docs.microsoft.com/en-us/learn/certifications/azure-data-scientist/" target="_blank">https://docs.microsoft.com/en-us/learn/certifications/azure-data-scientist/</a><br>
+
+IBM Data Science Course (With Certificate): <a href="https://cognitiveclass.ai/courses/python-for-data-science#about-course" target="_blank">https://cognitiveclass.ai/courses/python-for-data-science#about-course</a><br>
+
+IBM Other Courses (With Certificate): <a href="https://cognitiveclass.ai/courses" target="_blank">https://cognitiveclass.ai/courses</a><br>
+
+
        <h2>Get in Touch</h2>
            If you have specific questions or need personalized career guidance, don't hesitate to reach out to our career experts. We're here to help you succeed in your chosen career path.
         
