--- a/career.html
+++ b/career.html
@@ -182,12 +182,12 @@ Prepare for interviews with confidence. Access interview tips, common interview 
 
 <h2>Download Course Pdf</h2>
 <div class="btnn">
-<a href="notes of c.pdf" download="C.pdf">C Pdf</a>
-<a href="Java notes Codes.learning.pdf" download="java.pdf">Java Pdf</a>
-<a href="Python_codeslearning.pdf" download="python.pdf">Python Pdf</a>
-<a href="DBMS Notes.pdf" download="dbms.pdf">DBMS Pdf</a>
-<a href="Data Structures.pdf" download="data structure.pdf">Data Structure Pdf</a>
-<a href="C++ Notes.pdf" download="Cpp.pdf">C++ Pdf</a>
+<a href="notes of c.pdf" download="notes of c.pdf">C Pdf</a>
+<a href="Java notes Codes.learning.pdf" download="Java notes Codes.learning.pdf">Java Pdf</a>
+<a href="Python_codeslearning.pdf" download="Python_codeslearning.pdf">Python Pdf</a>
+<a href="DBMS Notes.pdf" download="DBMS Notes.pdf">DBMS Pdf</a>
+<a href="Data Structures.pdf" download="Data Structures.pdf">Data Structure Pdf</a>
+<a href="C++ Notes.pdf" download="C++ Notes.pdf">C++ Pdf</a>
 </div>
 
         
