--- a/career.html
+++ b/career.html
@@ -44,6 +44,8 @@
     }
         
         </style>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5504272387818584"
+     crossorigin="anonymous"></script>
     </head>
    
 <body background="bgkd.jpg">
