--- a/career.html
+++ b/career.html
@@ -183,6 +183,10 @@ Prepare for interviews with confidence. Access interview tips, common interview 
 <li><a href="https://www.interviewcake.com/" target="_blank">Interview Cake</a></li>
 <li><a href="https://www.biginterview.com/" target="_blank">Big Interview</a></li>
 
+        
+<li><a href="https://drive.google.com/drive/folders/10F0QE-W3wNqtVhZw8YodyQgImk-qAAxq?usp=sharing" target="_blank">Click here for Interview Questions...!</a></li>
+      
+
 <h2>Download Course Pdf</h2>
 <div class="btnn">
 <a href="notes of c.pdf" download="notes of c.pdf">C Pdf</a>
