--- a/index.html
+++ b/index.html
@@ -38,12 +38,23 @@
 <a href="profiles.html">Explore</a>
 
 </div>
+    
 <br>
 <br>
 <br>
 <br>
 <br>
 
+    <div class="btnn">
+<a href="compiler.html">Explore</a>
+
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+    
 
 </body>
 </html>
